--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
-	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5"
+		 xmlns="http://java.sun.com/xml/ns/j2ee"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_5.xsd">
 
 	<session-config>
 		<session-timeout>10</session-timeout>
@@ -24,7 +23,7 @@
 		<servlet-class>com.jstfs.web.friends.servlet.DividePageServlet</servlet-class>
 		<init-param>
 			<param-name>name</param-name>
-			<param-value>吴沛</param-value>
+			<param-value>haha</param-value>
 		</init-param>
 	</servlet>
 	<servlet>
