--- a/pom.xml
+++ b/pom.xml
@@ -15,23 +15,23 @@
 	</parent>
 	
 	<dependencies>
+		<dependency>
+			<groupId>com.jstfs</groupId>
+			<artifactId>jstfs-common</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		
 		<!-- MySQL8.x驱动 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.20</version>
-		</dependency>
-		
-		<!-- commons工具类 -->
-		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-lang3</artifactId>
-		    <version>3.9</version>
-		</dependency>
-		<dependency>
-		    <groupId>commons-collections</groupId>
-		    <artifactId>commons-collections</artifactId>
-		    <version>3.2.2</version>
+			<scope>runtime</scope>
 		</dependency>
 		
 		<!-- Servlet API -->
